--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -5,8 +5,11 @@ body {
 	flex-direction: column;/*sticky footer*/
 	margin: 0;
 	scroll-behavior: smooth;
-	font-family: '';
+	font-family: 'Inter';
 	font-weight: 400;
+	font-size: 18px;
+	font-weight: 400;
+	color: #000;
  }
 html{
 	font-size: 10px;
@@ -22,8 +25,31 @@ button{
 	cursor: pointer;
 }
 .container{
-	max-width: 137rem;
+	max-width: 170rem;
 	margin: 0 auto;
 	padding-left: 1.5rem;
 	padding-right: 1.5rem;
+}
+.title{
+	font-family: 'iowanoldstyle_bold';
+	font-weight: 700;
+	font-size: 4.5rem;
+}
+.btn{
+	display: block;
+	font-family: 'iowanoldstyle_bold';
+	width: 20.7rem;
+    height: 5.7rem;
+    color: #000;
+    line-height: 5.7rem;
+	font-size: 2.2rem;
+	border: none;
+	border-radius: 10px;
+	background: #FAE44D;
+	text-align: center;
+	transition: all .4s ease-in;
+}
+.btn:hover{
+	background: #ebcd25;
+	transition: all .4s ease-in;
 }
